# buffett

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/agent/: __main__.py  agent.py  config.py  llm.py  utils.py
src/agent/conf/: buffet.yaml  llm.yaml  timemachine.yaml  tushare.yaml
src/agent/context/: context.py  interest_stocks.py  prompt.py
src/agent/context/prompts/: buffett_agent_prompt_template.txt
src/agent/tools/: __init__.py  base.py  interest_stocks.py  stmarket.py  timemachine.py
src/agent/tools/func_call/: call.py  definition.py
src/tests/: conftest.py  test_agent.py  test_config.py  test_timemachine.py
src/tests/tools/: test.json  test_call_function.py  test_tool_definition.py  test_tushare.py
src/web/web/: settings.py  urls.py  wsgi.py
